refactor: disable form label

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       </mat-error>
     </mat-form-field>
     <!-- Disabled -->
-    <h5 class="mb-xs mt-xs">1.3 Form Field</h5>
+    <h5 class="mb-xs mt-xs">1.3 Disabled Field</h5>
     <mat-form-field appearance="outline">
       <mat-label>Input</mat-label>
       <input matInput placeholder="Input" disabled>
