--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,4 @@ $test-task-theme: mat-light-theme((
 @import './styles/utilities';
 @import './styles/card';
 @import './styles/buttons';
+@import './styles/calendar';
