--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,66 @@
 <div class="main-container">
-  <div class="form-fields">
-    <h2 class="mb-m">Form Elements</h2>
-    <!-- Form Field -->
-    <h5 class="mb-xs">1.1 Form Field</h5>
-    <mat-form-field appearance="outline">
-      <mat-label>Input</mat-label>
-      <input matInput placeholder="Input">
-    </mat-form-field>
-    <!-- Auto Clear -->
-    <h5 class="mb-xs mt-xs">1.2 Auto clear</h5>
-    <mat-form-field appearance="outline">
-      <mat-label>Input</mat-label>
-      <input matInput [formControl]="autoClearField" placeholder="Input">
-      <mat-icon matSuffix class="cursor-pointer" (click)="clearFormField(autoClearField)">close</mat-icon>
-    </mat-form-field>
-    <!-- With Error -->
-    <h5 class="mb-xs mt-xs">1.2 Error Field</h5>
-    <mat-form-field appearance="outline">
-      <mat-label>Email</mat-label>
-      <input matInput [formControl]="emailField" placeholder="Email" required>
-      <mat-error *ngIf="emailField.hasError('required')">
-        Please enter an email address.
-      </mat-error>
-      <mat-error *ngIf="emailField.hasError('email')">
-        Please use valid email address.
-      </mat-error>
-    </mat-form-field>
-    <!-- Disabled -->
-    <h5 class="mb-xs mt-xs">1.3 Disabled Field</h5>
-    <mat-form-field appearance="outline">
-      <mat-label>Input</mat-label>
-      <input matInput placeholder="Input" disabled>
-    </mat-form-field>
-    <!-- Radio Button -->
-    <h5 class="mb-m mt-xs">1.4 Radio Button</h5>
+  <h2 class="mb-m">3. Form Elements</h2>
+  <mat-divider></mat-divider>
+  <h4 class="mb-m">3.1 Text Input</h4>
+  <div class="form-fields mb-xl">
+    <div class="form-field">
+      <h5 class="mb-xs font-weight-regular">3.1.1 Default</h5>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Input Label</mat-label>
+        <input matInput placeholder="Input Label">
+      </mat-form-field>
+    </div>
+
+    <div class="form-field">
+      <div [ngStyle]="{ 'margin-top':'1.275rem' }"></div>
+      <mat-form-field appearance="outline" class="mat-focused w-100">
+        <mat-label>Input Label</mat-label>
+        <input matInput placeholder="Input Label" value="Text that User is entering!">
+      </mat-form-field>
+    </div>
+
+    <div class="form-field">
+      <h5 class="mb-xs font-weight-regular">3.1.2 Completed</h5>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Input Label</mat-label>
+        <input matInput placeholder="Input Label" value="Text entered, the input field is completed.">
+      </mat-form-field>
+    </div>
+
+    <div class="form-field">
+      <h5 class="mb-xs font-weight-regular">3.1.3 Auto clear</h5>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Input</mat-label>
+        <input matInput [formControl]="autoClearField" placeholder="Input">
+        <mat-icon matSuffix class="cursor-pointer" (click)="clearFormField(autoClearField)">close</mat-icon>
+      </mat-form-field>
+    </div>
+
+    <div class="form-field">
+      <h5 class="mb-xs font-weight-regular">3.1.4 Error Field</h5>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Input Label</mat-label>
+        <input matInput [formControl]="errorField" placeholder="Input Label">
+        <mat-error *ngIf="errorField.hasError('required')">
+          Error message.
+        </mat-error>
+        <mat-error *ngIf="errorField.hasError('email')">
+          Error message.
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="form-field">
+      <h5 class="mb-xs font-weight-regular">3.1.5 Disabled Field</h5>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Input</mat-label>
+        <input matInput placeholder="Input" disabled>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="form-field mb-xl">
+    <h4 class="mb-m">4.1 Radio Button</h4>
     <div>
       <mat-radio-group color="primary" class="mat-radio-layout-vertical" aria-label="Select an option" >
         <mat-radio-button value="1">Option 1</mat-radio-button>
@@ -41,20 +68,73 @@
       </mat-radio-group>
     </div>
   </div>
+
   <div class="other-components">
-    <!-- Cards -->
-    <h3 class="mb-m">Card</h3>
-    <mat-card class="mb-l">
-      <div class="card-body">
-        <div class="card-details">
-          <h3 class="text-green font-weight-regular mb-sm">Hello, Dr. Robert Fox</h3>
-          <p class="mb-sm">Today you have 12 appointments</p>
-          <button mat-flat-button color="primary" class="mat-button-curved">Open Calendar</button>
+    <div class="card">
+      <mat-card class="mb-l">
+        <div class="card-body">
+          <div class="card-details">
+            <h3 class="text-green font-weight-regular mb-sm">Hello, Dr. Robert Fox</h3>
+            <p class="mb-sm">Today you have 12 appointments</p>
+            <button mat-flat-button color="primary" class="mat-button-curved">Open Calendar</button>
+          </div>
+          <div class="card-img">
+            Image placeholder
+          </div>
         </div>
-        <div class="card-img">
-          Image placeholder
+      </mat-card>
+    </div>
+    <div class="calendar">
+      <div class="calendar-header">
+        <div class="calendar-month">
+          October
+        </div>
+        <div class="calendar-navigation">
+          <div class="calendar-nav-left">
+            <svg width="5" height="10" viewBox="0 0 5 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.53212 9.0756C4.79626 8.79016 4.7965 8.34961 4.53267 8.06388L2.32997 5.67839C1.97623 5.2953 1.97623 4.70469 2.32997 4.3216L4.53267 1.93611C4.7965 1.65039 4.79626 1.20983 4.53212 0.924391C4.23714 0.605629 3.73317 0.605629 3.43819 0.924391L0.295188 4.3208C-0.0595362 4.70412 -0.0595362 5.29587 0.295188 5.67919L3.43819 9.0756C3.73317 9.39436 4.23714 9.39436 4.53212 9.0756Z" fill="#263238" fill-opacity="0.82"/>
+            </svg>
+          </div>
+          <div class="calendar-nav-current">
+            <span>Oct 11-17</span>
+          </div>
+          <div class="calendar-nav-right">
+            <svg width="5" height="10" viewBox="0 0 5 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.46788 0.9244C0.203742 1.20984 0.203502 1.65039 0.46733 1.93612L2.67003 4.32161C3.02377 4.7047 3.02377 5.29531 2.67003 5.6784L0.467331 8.06389C0.203503 8.34961 0.203742 8.79017 0.467881 9.07561C0.76286 9.39437 1.26683 9.39437 1.56181 9.07561L4.70481 5.6792C5.05954 5.29588 5.05954 4.70413 4.70481 4.32081L1.56181 0.9244C1.26683 0.605638 0.762859 0.605638 0.46788 0.9244Z" fill="#263238" fill-opacity="0.82"/>
+            </svg>
+          </div>
         </div>
       </div>
-    </mat-card>
+      <div class="calendar-buttons">
+        <button class="calendar-button day-sun">
+          <div class="calendar-button-day-label">Sun</div>
+          <div class="calendar-button-day">11</div>
+        </button>
+        <button class="calendar-button">
+          <div class="calendar-button-day-label">Mon</div>
+          <div class="calendar-button-day">12</div>
+        </button>
+        <button class="calendar-button">
+          <div class="calendar-button-day-label">Tue</div>
+          <div class="calendar-button-day">13</div>
+        </button>
+        <button class="calendar-button">
+          <div class="calendar-button-day-label">Wed</div>
+          <div class="calendar-button-day">14</div>
+        </button>
+        <button class="calendar-button">
+          <div class="calendar-button-day-label">Thu</div>
+          <div class="calendar-button-day">15</div>
+        </button>
+        <button class="calendar-button active">
+          <div class="calendar-button-day-label">Fri</div>
+          <div class="calendar-button-day">16</div>
+        </button>
+        <button class="calendar-button day-sat">
+          <div class="calendar-button-day-label">Sat</div>
+          <div class="calendar-button-day">17</div>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
