--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -21,11 +21,16 @@
   }
 }
 
+.mat-form-field-infix {
+  border-top-width: 0.75rem !important;
+}
+
 .mat-form-field-appearance-outline {
   .mat-form-field-infix {
-    padding: 1.25rem 0 0.75rem 0 !important;
+    padding: 1.25rem 0 0.625rem 0 !important;
   }
   .mat-form-field-suffix {
+    padding-left: 0.5rem !important;
     top: -.15em !important;
   }
 
